# ascii-art-terminal

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  zadani.txt
doc/: Consts_8hpp.html  Consts_8hpp__dep__incl.map  Consts_8hpp__dep__incl.md5  Consts_8hpp_source.html  ImageFactory_8cpp.html  ImageFactory_8cpp__incl.map  ImageFactory_8cpp__incl.md5  ImageFactory_8hpp.html  ImageFactory_8hpp__dep__incl.map  ImageFactory_8hpp__dep__incl.md5  ImageFactory_8hpp__incl.map  ImageFactory_8hpp__incl.md5  ImageFactory_8hpp_source.html  Image_8cpp.html  Image_8cpp__incl.map  Image_8cpp__incl.md5  Image_8hpp.html  Image_8hpp__dep__incl.map  Image_8hpp__dep__incl.md5  Image_8hpp__incl.map  Image_8hpp__incl.md5  Image_8hpp_source.html  JPEGImage_8cpp.html  JPEGImage_8cpp__incl.map  JPEGImage_8cpp__incl.md5  JPEGImage_8hpp.html  JPEGImage_8hpp__dep__incl.map  JPEGImage_8hpp__dep__incl.md5  JPEGImage_8hpp__incl.map  JPEGImage_8hpp__incl.md5  JPEGImage_8hpp_source.html  Menu_8cpp.html  Menu_8cpp__incl.map  Menu_8cpp__incl.md5  Menu_8hpp.html  Menu_8hpp__dep__incl.map  Menu_8hpp__dep__incl.md5  Menu_8hpp__incl.map  Menu_8hpp__incl.md5  Menu_8hpp_source.html  (+165 more)
doc/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  (+44 more)
examples/: frame_0.ppm  frame_1.ppm
src/: main.cpp
(+46 files in other folders)
